<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavItemSortByNowPlaying"
        android:icon="@drawable/ic_now_playing"
        android:orderInCategory="1"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/bottomNavItemSortByPopularity"
        android:icon="@drawable/ic_popularity_white"
        android:orderInCategory="2"
        android:title="@string/popular" />
    <item
        android:id="@+id/bottomNavItemSortByRating"
        android:icon="@drawable/ic_rating_white"
        android:orderInCategory="3"
        android:title="@string/top_rated" />
    <item
        android:id="@+id/bottomNavSortByUpcoming"
        android:icon="@drawable/ic_upcoming"
        android:orderInCategory="4"
        android:title="@string/upcoming" />
</menu>