<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_label_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/release_date"
        android:textColor="@color/colorGrey700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_md_release_date_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_release_date"
        tools:text="22 January 2016" />

    <TextView
        android:id="@+id/tv_label_official_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/official_site"
        android:textColor="@color/colorGrey700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_release_date_full" />

    <TextView
        android:id="@+id/tv_md_official_site"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:onClick="visitOriginalWebsite"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_official_site"
        tools:text="Tap to visit" />

    <TextView
        android:id="@+id/tv_label_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/budget"
        android:textColor="@color/colorGrey700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_official_site" />

    <TextView
        android:id="@+id/tv_md_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="center"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_budget"
        tools:text="$135,000,000" />

    <TextView
        android:id="@+id/tv_md_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="center"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_revenue"
        tools:text="$532,925,985" />

    <TextView
        android:id="@+id/tv_label_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/revenue"
        android:textColor="@color/colorGrey700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_budget" />

    <TextView
        android:id="@+id/tv_label_countries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/countries"
        android:textColor="@color/colorGrey700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_revenue" />

    <TextView
        android:id="@+id/tv_md_countries2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="textStart"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_countries"
        tools:text="USA | Hong Kong | Taiwan USA  " />

    <TextView
        android:id="@+id/tv_label_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/languages"
        android:textColor="@color/colorGrey700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_countries2" />

    <TextView
        android:id="@+id/tv_md_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="textStart"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_languages"
        tools:text="Turkish | English | Spanish" />

    <TextView
        android:id="@+id/tv_label_companies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/companies"
        android:textColor="@color/colorGrey700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_md_languages" />

    <TextView
        android:id="@+id/tv_md_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="textStart"
        android:textColor="@color/colorGrey700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_companies"
        tools:text="Regency Enterprises, RatPac Entertainment, New Regency Pictures" />

</android.support.constraint.ConstraintLayout>