<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_arrow_up"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/up_arrow_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_up" />

    <ImageView
        android:id="@+id/iv_overlay"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_overlay_background"
        android:contentDescription="@string/cd_poster_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrow_up" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_movie_stats_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_overlay">

        <ImageView
            android:id="@+id/ic_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/cd_popularity_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rating" />

        <ImageView
            android:id="@+id/ic_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/cd_rating_icon"
            app:layout_constraintBottom_toBottomOf="@+id/ic_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/ic_rating"
            app:srcCompat="@drawable/ic_popularity" />


        <ImageView
            android:id="@+id/ic_runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/cd_runtime_icon"
            app:layout_constraintBottom_toBottomOf="@+id/ic_popularity"
            app:layout_constraintStart_toEndOf="@+id/tv_popularity"
            app:layout_constraintTop_toTopOf="@+id/ic_popularity"
            app:srcCompat="@drawable/ic_runtime" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_popularity"
            app:layout_constraintStart_toEndOf="@+id/ic_popularity"
            app:layout_constraintTop_toTopOf="@+id/ic_popularity" />


        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_rating"
            app:layout_constraintStart_toEndOf="@+id/ic_rating"
            app:layout_constraintTop_toTopOf="@+id/ic_rating" />


        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_runtime"
            app:layout_constraintStart_toEndOf="@+id/ic_runtime"
            app:layout_constraintTop_toTopOf="@+id/ic_runtime" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_details_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_movie_stats_container" />

    <TextView
        android:id="@+id/tv_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_movie_name" />

    <TextView
        android:id="@+id/tv_details_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_description" />


</android.support.constraint.ConstraintLayout>